--- a/themes/PaperMod/i18n/ckb.yaml
+++ b/themes/PaperMod/i18n/ckb.yaml
@@ -1,25 +1,26 @@
-- id: prev_page
-  translation: "پەڕەی پێشتر"
+---
+    - id: prev_page
+      translation: پەڕەی پێشتر
 
-- id: next_page
-  translation: "پەڕەی دواتر"
+    - id: next_page
+      translation: پەڕەی دواتر
 
-- id: read_time
-  translation:
-    one : "1 خولەک"
-    other: "{{ .Count }} خولەک"
+    - id: read_time
+      translation:
+          one: 1 خولەک
+          other: '{{ .Count }} خولەک'
 
-- id: toc
-  translation: "پێڕست"
+    - id: toc
+      translation: پێڕست
 
-- id: translations
-  translation: "وەرگێڕانەکان"
+    - id: translations
+      translation: وەرگێڕانەکان
 
-- id: home
-  translation: "ماڵەوە"
+    - id: home
+      translation: ماڵەوە
 
-- id: code_copy
-  translation: "لەبەری بگرەوە"
+    - id: code_copy
+      translation: لەبەری بگرەوە
 
-- id: code_copied
-  translation: "لەبەر گیرایەوە!"
+    - id: code_copied
+      translation: لەبەر گیرایەوە!
