--- a/themes/PaperMod/i18n/hi.yaml
+++ b/themes/PaperMod/i18n/hi.yaml
@@ -1,19 +1,20 @@
-- id: prev_page
-  translation: "पिछला"
+---
+    - id: prev_page
+      translation: पिछला
 
-- id: next_page
-  translation: "अगला"
+    - id: next_page
+      translation: अगला
 
-- id: read_time
-  translation:
-    one : "एक मिनट"
-    other: "{{ .Count }} मिनट"
+    - id: read_time
+      translation:
+          one: एक मिनट
+          other: '{{ .Count }} मिनट'
 
-- id: edit_post
-  translation: "सुधारें"
+    - id: edit_post
+      translation: सुधारें
 
-- id: toc
-  translation: "विषय - सूची"
+    - id: toc
+      translation: विषय - सूची
 
-- id: translations
-  translation: "अनुवाद"
+    - id: translations
+      translation: अनुवाद
