--- a/themes/PaperMod/i18n/it.yaml
+++ b/themes/PaperMod/i18n/it.yaml
@@ -1,33 +1,34 @@
-- id: prev_page
-  translation: "Precedente"
+---
+    - id: prev_page
+      translation: Precedente
 
-- id: next_page
-  translation: "Successivo"
+    - id: next_page
+      translation: Successivo
 
-- id: read_time
-  translation:
-    one: "1 minuto"
-    other: "{{ .Count }} minuti"
+    - id: read_time
+      translation:
+          one: 1 minuto
+          other: '{{ .Count }} minuti'
 
-- id: words
-  translation:
-    one : "parola"
-    other: "{{ .Count }} parole"
+    - id: words
+      translation:
+          one: parola
+          other: '{{ .Count }} parole'
 
-- id: toc
-  translation: "Indice contenuti"
+    - id: toc
+      translation: Indice contenuti
 
-- id: translations
-  translation: "Traduzioni"
+    - id: translations
+      translation: Traduzioni
 
-- id: home
-  translation: "Home"
+    - id: home
+      translation: Home
 
-- id: edit_post
-  translation: "Modifica"
+    - id: edit_post
+      translation: Modifica
 
-- id: code_copy
-  translation: "copia"
+    - id: code_copy
+      translation: copia
 
-- id: code_copied
-  translation: "copiato!"
+    - id: code_copied
+      translation: copiato!
