--- a/themes/PaperMod/i18n/ja.yaml
+++ b/themes/PaperMod/i18n/ja.yaml
@@ -1,33 +1,34 @@
-- id: prev_page
-  translation: "前へ"
+---
+    - id: prev_page
+      translation: 前へ
 
-- id: next_page
-  translation: "次へ"
+    - id: next_page
+      translation: 次へ
 
-- id: read_time
-  translation:
-    one : "1 分"
-    other: "{{ .Count }} 分"
+    - id: read_time
+      translation:
+          one: 1 分
+          other: '{{ .Count }} 分'
 
-- id: words
-  translation:
-    one: "文字"
-    other: "{{ .Count }} 文字"
+    - id: words
+      translation:
+          one: 文字
+          other: '{{ .Count }} 文字'
 
-- id: toc
-  translation: "目次"
+    - id: toc
+      translation: 目次
 
-- id: translations
-  translation: "言語"
+    - id: translations
+      translation: 言語
 
-- id: home
-  translation: "ホーム"
+    - id: home
+      translation: ホーム
 
-- id: edit_post
-  translation: "編集"
+    - id: edit_post
+      translation: 編集
 
-- id: code_copy
-  translation: "コピー"
+    - id: code_copy
+      translation: コピー
 
-- id: code_copied
-  translation: "コピーされました!"
+    - id: code_copied
+      translation: コピーされました!
