--- a/themes/PaperMod/i18n/no.yaml
+++ b/themes/PaperMod/i18n/no.yaml
@@ -1,33 +1,34 @@
-- id: prev_page
-  translation: "Forrige Side"
+---
+    - id: prev_page
+      translation: Forrige Side
 
-- id: next_page
-  translation: "Neste Side"
+    - id: next_page
+      translation: Neste Side
 
-- id: read_time
-  translation:
-    one: "1 min"
-    other: "{{ .Count }} min"
+    - id: read_time
+      translation:
+          one: 1 min
+          other: '{{ .Count }} min'
 
-- id: words
-  translation:
-    one: "ord"
-    other: "{{ .Count }} ord"
+    - id: words
+      translation:
+          one: ord
+          other: '{{ .Count }} ord'
 
-- id: toc
-  translation: "Innholdsfortegnelse"
+    - id: toc
+      translation: Innholdsfortegnelse
 
-- id: translations
-  translation: "Oversettelser"
+    - id: translations
+      translation: Oversettelser
 
-- id: home
-  translation: "Hjem"
+    - id: home
+      translation: Hjem
 
-- id: edit_post
-  translation: "Rediger"
+    - id: edit_post
+      translation: Rediger
 
-- id: code_copy
-  translation: "Kopier"
+    - id: code_copy
+      translation: Kopier
 
-- id: code_copied
-  translation: "Kopiert!"
+    - id: code_copied
+      translation: Kopiert!
