--- a/themes/PaperMod/i18n/oc.yaml
+++ b/themes/PaperMod/i18n/oc.yaml
@@ -1,33 +1,34 @@
-- id: prev_page
-  translation: "Prec."
+---
+    - id: prev_page
+      translation: Prec.
 
-- id: next_page
-  translation: "Seg."
+    - id: next_page
+      translation: Seg.
 
-- id: read_time
-  translation:
-    one : "1 min"
-    other: "{{ .Count }} min"
+    - id: read_time
+      translation:
+          one: 1 min
+          other: '{{ .Count }} min'
 
-- id: words
-  translation:
-    one : "mot"
-    other: "{{ .Count }} motss"
+    - id: words
+      translation:
+          one: mot
+          other: '{{ .Count }} motss'
 
-- id: toc
-  translation: "Taula de contengut"
+    - id: toc
+      translation: Taula de contengut
 
-- id: translations
-  translation: "Traduccions"
+    - id: translations
+      translation: Traduccions
 
-- id: home
-  translation: "Acuèlh"
+    - id: home
+      translation: Acuèlh
 
-- id: edit_post
-  translation: "Modificar"
+    - id: edit_post
+      translation: Modificar
 
-- id: code_copy
-  translation: "copiar"
+    - id: code_copy
+      translation: copiar
 
-- id: code_copied
-  translation: "copiat !"
+    - id: code_copied
+      translation: copiat !
