--- a/themes/PaperMod/i18n/ro.yaml
+++ b/themes/PaperMod/i18n/ro.yaml
@@ -1,33 +1,34 @@
-- id: prev_page
-  translation: "Înapoi"
+---
+    - id: prev_page
+      translation: Înapoi
 
-- id: next_page
-  translation: "Înainte"
+    - id: next_page
+      translation: Înainte
 
-- id: read_time
-  translation:
-    one : "1 minut"
-    other: "{{ .Count }} minute"
+    - id: read_time
+      translation:
+          one: 1 minut
+          other: '{{ .Count }} minute'
 
-- id: words
-  translation:
-    one : "cuvânt"
-    other: "{{ .Count }} cuvinte"
+    - id: words
+      translation:
+          one: cuvânt
+          other: '{{ .Count }} cuvinte'
 
-- id: toc
-  translation: "Sumar"
+    - id: toc
+      translation: Sumar
 
-- id: translations
-  translation: "Traduceri"
+    - id: translations
+      translation: Traduceri
 
-- id: home
-  translation: "Acasă"
+    - id: home
+      translation: Acasă
 
-- id: edit_post
-  translation: "Editează"
+    - id: edit_post
+      translation: Editează
 
-- id: code_copy
-  translation: "copiază"
+    - id: code_copy
+      translation: copiază
 
-- id: code_copied
-  translation: "copiat!"
+    - id: code_copied
+      translation: copiat!
