--- a/themes/PaperMod/i18n/uz.yaml
+++ b/themes/PaperMod/i18n/uz.yaml
@@ -1,20 +1,20 @@
-- id: prev_page
-  translation: "Oldingi sahifa"
+---
+    - id: prev_page
+      translation: Oldingi sahifa
 
-- id: next_page
-  translation: "Keyingi sahifa"
+    - id: next_page
+      translation: Keyingi sahifa
 
-- id: read_time
-  translation:
-    one : "Bir daqiqa"
-    other: "{{ .Count }} daqiqa"
+    - id: read_time
+      translation:
+          one: Bir daqiqa
+          other: '{{ .Count }} daqiqa'
 
-- id: toc
-  translation: "Mundarija"
+    - id: toc
+      translation: Mundarija
 
-- id: translations
-  translation: "Tarjimalar"
+    - id: translations
+      translation: Tarjimalar
 
-- id: home
-  translation: "Bosh sahifa"
-  
+    - id: home
+      translation: Bosh sahifa
