Adding Blog Post for ESO

--- a/themes/PaperMod/i18n/da.yaml
+++ b/themes/PaperMod/i18n/da.yaml
@@ -1,29 +1,28 @@
----
-    - id: prev_page
-      translation: Forrige Side
+- id: prev_page
+  translation: "Forrige Side"
 
-    - id: next_page
-      translation: Næste Side
+- id: next_page
+  translation: "Næste Side"
 
-    - id: read_time
-      translation:
-          one: 1 min
-          other: '{{ .Count }} min'
+- id: read_time
+  translation:
+    one: "1 min"
+    other: "{{ .Count }} min"
 
-    - id: toc
-      translation: Indholdsfortegnelse
+- id: toc
+  translation: "Indholdsfortegnelse"
 
-    - id: translations
-      translation: Oversættelser
+- id: translations
+  translation: "Oversættelser"
 
-    - id: home
-      translation: Start
+- id: home
+  translation: "Start"
 
-    - id: edit_post
-      translation: Rediger
+- id: edit_post
+  translation: "Rediger"
 
-    - id: code_copy
-      translation: kopier
+- id: code_copy
+  translation: "kopier"
 
-    - id: code_copied
-      translation: kopieret!
+- id: code_copied
+  translation: "kopieret!"
