--- a/themes/PaperMod/i18n/el.yaml
+++ b/themes/PaperMod/i18n/el.yaml
@@ -1,34 +1,33 @@
----
-    - id: prev_page
-      translation: Προηγούμενο
+- id: prev_page
+  translation: "Προηγούμενο"
 
-    - id: next_page
-      translation: Επόμενο
+- id: next_page
+  translation: "Επόμενο"
 
-    - id: read_time
-      translation:
-          one: 1 λεπτό
-          other: '{{ .Count }} λεπτά'
+- id: read_time
+  translation:
+    one: "1 λεπτό"
+    other: "{{ .Count }} λεπτά"
 
-    - id: words
-      translation:
-          one: λέξη
-          other: '{{ .Count }} λέξεις'
+- id: words
+  translation:
+    one: "λέξη"
+    other: "{{ .Count }} λέξεις"
 
-    - id: toc
-      translation: Πίνακας Περιεχομένων
+- id: toc
+  translation: "Πίνακας Περιεχομένων"
 
-    - id: translations
-      translation: Μεταφράσεις
+- id: translations
+  translation: "Μεταφράσεις"
 
-    - id: home
-      translation: Αρχική
+- id: home
+  translation: "Αρχική"
 
-    - id: edit_post
-      translation: Επεξεργασία
+- id: edit_post
+  translation: "Επεξεργασία"
 
-    - id: code_copy
-      translation: αντιγραφή
+- id: code_copy
+  translation: "αντιγραφή"
 
-    - id: code_copied
-      translation: αντιγράφηκε!
+- id: code_copied
+  translation: "αντιγράφηκε!"
