--- a/themes/PaperMod/i18n/eo.yaml
+++ b/themes/PaperMod/i18n/eo.yaml
@@ -1,26 +1,25 @@
----
-    - id: prev_page
-      translation: antaŭa paĝo
+- id: prev_page
+  translation: "antaŭa paĝo"
 
-    - id: next_page
-      translation: sekva paĝo
+- id: next_page
+  translation: "sekva paĝo"
 
-    - id: read_time
-      translation:
-          one: 1 min
-          other: '{{ .Count }} min'
+- id: read_time
+  translation:
+    one : "1 min"
+    other: "{{ .Count }} min"
 
-    - id: toc
-      translation: Enhavo
+- id: toc
+  translation: "Enhavo"
 
-    - id: translations
-      translation: tradukoj
+- id: translations
+  translation: "tradukoj"
 
-    - id: home
-      translation: ĉefpaĝo
+- id: home
+  translation: "ĉefpaĝo"
 
-    - id: code_copy
-      translation: kopii
+- id: code_copy
+  translation: "kopii"
 
-    - id: code_copied
-      translation: kopiite!
+- id: code_copied
+  translation: "kopiite!"
