--- a/themes/PaperMod/i18n/hu.yaml
+++ b/themes/PaperMod/i18n/hu.yaml
@@ -1,17 +1,16 @@
----
-    - id: prev_page
-      translation: Előző oldal
+- id: prev_page
+  translation: "Előző oldal"
 
-    - id: next_page
-      translation: Következő oldal
+- id: next_page
+  translation: "Következő oldal"
 
-    - id: read_time
-      translation:
-          one: 1 perc
-          other: '{{ .Count }} perc'
+- id: read_time
+  translation:
+    one: "1 perc"
+    other: "{{ .Count }} perc"
 
-    - id: toc
-      translation: Tartalomjegyzék
+- id: toc
+  translation: "Tartalomjegyzék"
 
-    - id: translations
-      translation: Fordítások
+- id: translations
+  translation: "Fordítások"
