--- a/themes/PaperMod/i18n/fa.yaml
+++ b/themes/PaperMod/i18n/fa.yaml
@@ -1,29 +1,28 @@
----
-    - id: prev_page
-      translation: صفحه قبلی
+- id: prev_page
+  translation: "صفحه قبلی"
 
-    - id: next_page
-      translation: صفحه بعدی
+- id: next_page
+  translation: "صفحه بعدی"
 
-    - id: read_time
-      translation:
-          one: ۱ دقیقه
-          other: '{{ .Count }} دقیقه'
+- id: read_time
+  translation:
+    one: "۱ دقیقه"
+    other: "{{ .Count }} دقیقه"
 
-    - id: toc
-      translation: فهرست مطالب
+- id: toc
+  translation: "فهرست مطالب"
 
-    - id: translations
-      translation: ترجمه ها
+- id: translations
+  translation: "ترجمه ها"
 
-    - id: home
-      translation: خانه
+- id: home
+  translation: "خانه"
 
-    - id: edit_post
-      translation: ویرایش
+- id: edit_post
+  translation: "ویرایش"
 
-    - id: code_copy
-      translation: کپی
+- id: code_copy
+  translation: "کپی"
 
-    - id: code_copied
-      translation: کپی شد!
+- id: code_copied
+  translation: "کپی شد!"
