--- a/themes/PaperMod/i18n/fr.yaml
+++ b/themes/PaperMod/i18n/fr.yaml
@@ -1,34 +1,33 @@
----
-    - id: prev_page
-      translation: Précédent
+- id: prev_page
+  translation: "Précédent"
 
-    - id: next_page
-      translation: Suivant
+- id: next_page
+  translation: "Suivant"
 
-    - id: read_time
-      translation:
-          one: 1 min
-          other: '{{ .Count }} min'
+- id: read_time
+  translation:
+    one : "1 min"
+    other: "{{ .Count }} min"
 
-    - id: words
-      translation:
-          one: mot
-          other: '{{ .Count }} mots'
+- id: words
+  translation:
+    one : "mot"
+    other: "{{ .Count }} mots"
 
-    - id: toc
-      translation: Table des matières
+- id: toc
+  translation: "Table des matières"
 
-    - id: translations
-      translation: Traductions
+- id: translations
+  translation: "Traductions"
 
-    - id: home
-      translation: Accueil
+- id: home
+  translation: "Accueil"
 
-    - id: edit_post
-      translation: Modifier
+- id: edit_post
+  translation: "Modifier"
 
-    - id: code_copy
-      translation: Copier
+- id: code_copy
+  translation: "Copier"
 
-    - id: code_copied
-      translation: Copié !
+- id: code_copied
+  translation: "Copié !"
