--- a/themes/PaperMod/i18n/he.yaml
+++ b/themes/PaperMod/i18n/he.yaml
@@ -1,34 +1,33 @@
----
-    - id: prev_page
-      translation: הקודם
+- id: prev_page
+  translation: "הקודם"
 
-    - id: next_page
-      translation: הבא
+- id: next_page
+  translation: "הבא"
 
-    - id: read_time
-      translation:
-          one: דקה אחת
-          other: '{{ .Count }} דקות'
+- id: read_time
+  translation:
+    one: "דקה אחת"
+    other: "{{ .Count }} דקות"
 
-    - id: words
-      translation:
-          one: מילה אחת
-          other: '{{ .Count }} מילים'
+- id: words
+  translation:
+    one: "מילה אחת"
+    other: "{{ .Count }} מילים"
 
-    - id: toc
-      translation: תוכן עניינים
+- id: toc
+  translation: "תוכן עניינים"
 
-    - id: translations
-      translation: תרגומים
+- id: translations
+  translation: "תרגומים"
 
-    - id: home
-      translation: בית
+- id: home
+  translation: "בית"
 
-    - id: edit_post
-      translation: ערוך
+- id: edit_post
+  translation: "ערוך"
 
-    - id: code_copy
-      translation: העתק
+- id: code_copy
+  translation: "העתק"
 
-    - id: code_copied
-      translation: הועתק!
+- id: code_copied
+  translation: "הועתק!"
