--- a/themes/PaperMod/i18n/hr.yaml
+++ b/themes/PaperMod/i18n/hr.yaml
@@ -1,34 +1,33 @@
----
-    - id: prev_page
-      translation: Prethodna stranica
+- id: prev_page
+  translation: "Prethodna stranica"
 
-    - id: next_page
-      translation: Sljedeća stranica
+- id: next_page
+  translation: "Sljedeća stranica"
 
-    - id: read_time
-      translation:
-          one: 1 minuta
-          other: '{{ .Count }} minute'
+- id: read_time
+  translation:
+    one : "1 minuta"
+    other: "{{ .Count }} minute"
 
-    - id: words
-      translation:
-          one: riječ
-          other: '{{ .Count }} riječi'
+- id: words
+  translation:
+    one : "riječ"
+    other: "{{ .Count }} riječi"
 
-    - id: toc
-      translation: Tablica Sadržaja
+- id: toc
+  translation: "Tablica Sadržaja"
 
-    - id: translations
-      translation: Prijevodi
+- id: translations
+  translation: "Prijevodi"
 
-    - id: home
-      translation: Početna stranica
+- id: home
+  translation: "Početna stranica"
 
-    - id: edit_post
-      translation: Promjeni
+- id: edit_post
+  translation: "Promjeni"
 
-    - id: code_copy
-      translation: kopiraj
+- id: code_copy
+  translation: "kopiraj"
 
-    - id: code_copied
-      translation: kopirano!
+- id: code_copied
+  translation: "kopirano!"
