--- a/themes/PaperMod/i18n/nl.yaml
+++ b/themes/PaperMod/i18n/nl.yaml
@@ -1,34 +1,33 @@
----
-    - id: prev_page
-      translation: Vorige
+- id: prev_page
+  translation: "Vorige"
 
-    - id: next_page
-      translation: Volgende
+- id: next_page
+  translation: "Volgende"
 
-    - id: read_time
-      translation:
-          one: 1 min
-          other: '{{ .Count }} min'
+- id: read_time
+  translation:
+      one: "1 min"
+      other: "{{ .Count }} min"
 
-    - id: words
-      translation:
-          one: woord
-          other: '{{ .Count }} woorden'
+- id: words
+  translation:
+    one : "woord"
+    other: "{{ .Count }} woorden"
 
-    - id: toc
-      translation: Inhoudsopgave
+- id: toc
+  translation: "Inhoudsopgave"
 
-    - id: translations
-      translation: Vertalingen
+- id: translations
+  translation: "Vertalingen"
 
-    - id: home
-      translation: Startpagina
+- id: home
+  translation: "Startpagina"
 
-    - id: edit_post
-      translation: Bewerk
+- id: edit_post
+  translation: "Bewerk"
 
-    - id: code_copy
-      translation: kopieer
+- id: code_copy
+  translation: "kopieer"
 
-    - id: code_copied
-      translation: gekopieerd!
+- id: code_copied
+  translation: "gekopieerd!"
