--- a/themes/PaperMod/i18n/pnb.yaml
+++ b/themes/PaperMod/i18n/pnb.yaml
@@ -1,34 +1,33 @@
----
-    - id: prev_page
-      translation: پِچھلا
+- id: prev_page
+  translation: "پِچھلا"
 
-    - id: next_page
-      translation: اگلا
+- id: next_page
+  translation: "اگلا"
 
-    - id: read_time
-      translation:
-          one: ایک منٹ
-          other: مِنٹ {{ .Count }}
+- id: read_time
+  translation:
+    one: "ایک منٹ"
+    other: "مِنٹ {{ .Count }}"
 
-    - id: words
-      translation:
-          one: لفظ
-          other: لفظ {{ .Count }}
+- id: words
+  translation:
+    one: "لفظ"
+    other: "لفظ {{ .Count }}"
 
-    - id: toc
-      translation: تتکرا
+- id: toc
+  translation: "تتکرا"
 
-    - id: translations
-      translation: انوواد
+- id: translations
+  translation: "انوواد"
 
-    - id: home
-      translation: گھر
+- id: home
+  translation: "گھر"
 
-    - id: edit_post
-      translation: سودھ
+- id: edit_post
+  translation: "سودھ"
 
-    - id: code_copy
-      translation: کاپی
+- id: code_copy
+  translation: "کاپی"
 
-    - id: code_copied
-      translation: کاپی کیتی گئی!
+- id: code_copied
+  translation: "کاپی کیتی گئی!"
