--- a/themes/PaperMod/i18n/pt.yaml
+++ b/themes/PaperMod/i18n/pt.yaml
@@ -1,33 +1,33 @@
----
-    - id: prev_page
-      translation: Página Anterior
+- id: prev_page
+  translation: "Página Anterior"
 
-    - id: next_page
-      translation: Próxima Página
+- id: next_page
+  translation: "Próxima Página"
 
-    - id: read_time
-      translation:
-          one: 1 minuto
-          other: '{{ .Count }} minutos'
+- id: read_time
+  translation:
+    one: "1 minuto"
+    other: "{{ .Count }} minutos"
 
-    - id: words
-      translation:
-          one: palavra
-          other: '{{ .Count }} palavras'
+- id: words
+  translation:
+    one : "palavra"
+    other: "{{ .Count }} palavras"
 
-    - id: toc
-      translation: Conteúdo
+- id: toc
+  translation: "Conteúdo"
 
-    - id: translations
-      translation: Traduções
-    - id: home
-      translation: Início
+- id: translations
+  translation: "Traduções"
+  
+- id: home
+  translation: "Início"
 
-    - id: edit_post
-      translation: Editar
+- id: edit_post
+  translation: "Editar"
 
-    - id: code_copy
-      translation: copiar
+- id: code_copy
+  translation: "copiar"
 
-    - id: code_copied
-      translation: copiado!
+- id: code_copied
+  translation: "copiado!"
